modify index.html and add latency.html

--- a/Caddy_file/index.html
+++ b/Caddy_file/index.html
@@ -4,24 +4,42 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js"></script>
 </script>
 </head>
 
 <body>
 <p>This example uses the HTML DOM to assign an "onclick" event to a p element.</p>
-
 <div id="div1"><h2>Upload Speed</h2></div>
-<button>Throughput</button>
+<select size="1"   font-size: 9pt"   name="D1"
+
+ onChange="window.open(this.options[this.selectedIndex].value,'','')">
+<option value="#" selected>Please select what you want to test</option>
+<option value="https://localhost:8888/latency.html">latency</option>
+<option value="https://localhost:8888">Throughput</option>
+</select>
+<button onClick="myFunction()">Throughput</button>
+<select id="Times" >      
+<option value="1">1</option>  
+<option value="5">5</option>  
+<option value="10">10</option>  
+<option value="15">15</option>  
+<option value="20">20</option>     
+</select>
+
+<button onClick="selectTimes()">Times</button>
 <canvas id="myChart"></canvas>
 <script>
 
 
-var t1, t2, t3, throughput, sum10, avg10;
-sum10 = 0;
+
+var t1, t2, t3, throughput, times;
 var currentFile_size = 10;
-var results = [1,2,3,4,5,6,7,8,9,10,11];
+var results = [0,0,0,0,0,0,0,0,0,0,0];
 var index = 0;
-function success_callback(result)
+var files = ["10K_", "20K_", "50K_", "100K_", "200K_", "500K_", "1M_", "10M_", "20M_", "50M_", "100M_"];
+var fileSize = [0.01, 0.02, 0.05, 0.1, 0.2, 0.5, 1, 10, 20, 50, 100];
+function success_callback(result, code)
 {
 	t2 = new Date().getTime();
 	t3 = (t2 - t1) / 1000;
@@ -29,7 +47,7 @@ function success_callback(result)
 	results[index] += throughput;
 	 console.log( currentFile_size+ " MB throughput is: " + throughput + " Mbps");
 	 console.log("currentFile_size is: " + currentFile_size);
-	 console.log(result[index]);
+	 console.log(results[index]);
 }
 
 function error_callback(result)
@@ -37,166 +55,37 @@ function error_callback(result)
 	$("#div1").html("cannot load content");
 }
 
+function selectTimes()
+{
+	var x = document.getElementById("Times");
+ 	var idx = x.selectedIndex;
+ 	times = x.options[idx].value;
+
+}
 function myFunction()
 {
 	
-		var i;
-	
-		for(i = 0; i < 10; i++)
+		var i, j;	
+		for(i = 0; i < files.length; i++)
 		{
-			t1 = new Date().getTime();
-			currentFile_size = 0.01;
-			var fileName = "10K_"+i+".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-		for(i = 0; i < 10; i++)
-		{
-
-			t1 = new Date().getTime();
-			currentFile_size = 0.02;
-			var fileName = "20K_"+i+".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 0.05;
-			var fileName = "50K_"+i+".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 0.1;
-			var fileName = "100K_" + i + ".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 0.2;
-			var fileName = "200K_" + i + ".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 0.5;
-			var fileName = "500K_" + i + ".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 1;
-			var fileName = "1M_" + i + ".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 10;
-			var fileName = "10M_"+(i)+".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 20;
-			var fileName = "20M_"+i+".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-
-		index++;
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 50;
-			var fileName = "50M_" + i + ".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
-		}
-		index++;
-
-		for(i = 0; i < 10; i++)
-		{
-			t1 = new Date().getTime();
-			currentFile_size = 100;
-			var fileName = "100M_" + i + ".txt";
-			$.ajax({url: fileName,
-			success: success_callback,
-			error: error_callback,
-			cache: false,
-			ifModified: true,
-			async: false});
+			for(j = 0; j < times; j++)
+			{
+				t1 = new Date().getTime();
+				currentFile_size = fileSize[i];
+				var fileName = files[i]+j+".txt";
+				$.ajax({url: fileName,
+				success: success_callback,
+				error: error_callback,
+				cache: false,
+				ifModified: true,
+				async: false});
+			}
+			index++;
 		}
 
 		for(i = 0; i < results.length; i++)
 		{
-				results[i] = results[i] / 10;
+				results[i] = results[i] / times;
 		}
 		 $.ajax({
         success: myGraph,
@@ -217,21 +106,40 @@ function myGraph()
         labels: ["10KB", "20KB", "50KB", "100KB", "200KB", "500KB", "1MB", 	"10MB", "20MB", "50MB", "100MB"],
         datasets: [{
             label: "Throughput and File Size",
-            backgroundColor: 'rgb(255, 99, 132)',
+            fill: false,
             borderColor: 'rgb(255, 99, 132)',
             data: [results[0], results[1],results[2], results[3], results[4], results[5], results[6], results[7], results[8], results[9], results[10]],
         }]
     },
 
     // Configuration options go here
-    options: {}
+    options: {
+    	scales: { 
+    	yAxes: [{ 
+     	scaleLabel: { 
+     	display: true, 
+     	labelString: 'Throughput(Mbps)' 
+     			} 
+   	 		}
+   	 	], 
+   	 	xAxes: [{ 
+     	scaleLabel: { 
+     	display: true, 
+     	labelString: 'File size' 
+     			} 
+   	 		}]	
+    	}
+    }
+ 
 });
-	//console.log(throughput1 + "-------------" + throughput2);
+
+
 }
 
-$(document).ready(function(){
-	$("button").click(myFunction);
-})
+
+// $(document).ready(function(){
+// 	$("button").click(myFunction);
+// })
 
 
 
